# libtiff

./: CMakeLists.txt
cmake/hunter/: HunterConfig.cmake
libtiff/: CMakeLists.txt  Config.cmake.in
